# routes/api.php
@@ -20,6 +20,8 @@ Route::post('login', [AuthController::class, 'login'])->name('login');
 
 Route::middleware('auth:api')->group(function () {
     Route::get('warehouse', [MarketController::class, 'warehouse'])->name('warehouse');
+    Route::get('wallet', [MarketController::class, 'wallet'])->name('wallet');
     Route::post('order', [MarketController::class, 'order'])->name('order');
     Route::put('order/{order_id}', [MarketController::class, 'order_confirm'])->name('order_confirm');
+    Route::put('order/cancell/{order_id}', [MarketController::class, 'order_cancell'])->name('order_cancell');
 });
